...
            </Text>
          ) : (
            <Text>This source link could not be opened.</Text>
          )}
        </ScrollView>
        <View style={styles.dismiss}>
          <Button label="OK" onPress={dismiss} />
        </View>
      </SafeAreaView>
    </SafeAreaProvider>
  );
}
const styles = StyleSheet.create({
...
